# Orthanc-plugins-cpp

./: CMakeLists.txt  LICENSE  README.md  accessrights.cpp  dicomhandle.cpp  dicomhandle.hpp  instancefilter.cpp  patientnamemapping.cpp  patientnamemapping.hpp  shadowwriter.cpp  tagprocessorlist.cpp  tagprocessorlist.hpp
